`Collectors.toList()` 사용으로 스트림 변환 개선
[fix] 기존 `toList()` 대신 `Collectors.toList()`를 사용하여 스트림 변환 방식을 명확히 하고 호환성을 향상시켰습니다. 기능 영향은 없습니다.